Updated frontend index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,12 @@
         <form id="taskForm">
             <input type="text" id="title" placeholder="Task Title" required>
             <textarea id="description" placeholder="Task Description"></textarea>
+            <label for="priority">Task Assigned To:</label>
+            <select id="priority">
+                <option value="shiv">Shivraj</option>
+                <option value="om">Om</option>
+                <option value="panu">Pranav</option>
+            </select>
             <label for="status">Status:</label>
             <select id="status">
                 <option value="pending">Pending</option>
