Updated index.html, style.cs, script.js frontend files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
         <form id="taskForm">
             <input type="text" id="title" placeholder="Task Title" required>
             <textarea id="description" placeholder="Task Description"></textarea>
-            <label for="priority">Task Assigned To:</label>
-            <select id="priority">
+            <label for="assignedTo">Task Assigned To:</label>
+            <select id="assignedTo">
                 <option value="shiv">Shivraj</option>
                 <option value="om">Om</option>
                 <option value="panu">Pranav</option>
